fixed some findbugs warnings